video/experiments/radium/radium.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radium
  template:
    metadata:
      labels:
        app: radium
    spec:
      containers:
      - name: radium
        image: ghcr.io/zibbp/radium:next
        ports:
          - name: web
            containerPort: 3000
        resources:
          requests:
            memory: 100Mi
          limits:
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: radium
spec:
  selector:
    app: radium
  ports:
  - name: web
    port: 3000
