video/experiments/radium/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radium
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE
  rules:
  - host: AUTOMATIC_REPLACE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radium
            port:
              name: web
